[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/SpecialMode.gd" type="Script" id=1]
[ext_resource path="res://Assets/SpecialMode.png" type="Texture" id=2]

[sub_resource type="PlaneMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_texture = ExtResource( 2 )

[node name="SpecialMode" type="MeshInstance"]
mesh = SubResource( 6 )
material/0 = SubResource( 7 )
script = ExtResource( 1 )

[node name="SpecialModeTimer" type="Timer" parent="."]

[node name="RegenerationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="SpecialModeTimer" to="." method="_on_SpecialModeTimer_timeout"]
[connection signal="timeout" from="RegenerationTimer" to="." method="_on_RegenerationTimer_timeout"]
